# netwatch-cli

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  requirements.txt
docs/: handoff-to-claude.md  handoff-to-codex.md  v0.2-plan.md  v0.3-plan.md  v0.5-plan.md  v0.6-plan.md  v0.7-plan.md  v0.8-plan.md  v0.8.2-plan.md  v0.8.3-plan.md  v0.9-plan.md
netwatch/: __init__.py  analysis.py  cli.py  config.py  network_info.py  proxy_probe.py  router.py  scanner.py  speed.py  speedtest_runner.py
netwatch/speedtest_backends/: __init__.py  librespeed_cli.py  models.py  ookla_cli.py  python_speedtest.py
tests/: test_analysis.py  test_config.py  test_proxy_probe.py  test_router.py  test_scanner.py  test_speedtest_backends.py
