[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "netwatch-cli"
version = "0.7.0"
description = "A lightweight interactive command-line network status tool."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "psutil>=5.9",
    "requests>=2.31",
    "rich>=13.0",
    "speedtest-cli>=2.1",
]

[project.scripts]
netwatch = "netwatch.cli:main"

[tool.setuptools.packages.find]
include = ["netwatch*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
